Add setting to keep water as a fluid in recipes

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -1,2 +1,7 @@
 [recipe-name]
 barrelled=__1__ using barrels
+
+[mod-setting-name]
+keep-fluid-water=Keep water as a fluid
+[mod-setting-description]
+keep-fluid-water=Keep water as a fluid in recipes.
