Add setting to remove empty barrels from recipes

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -2,6 +2,9 @@
 barrelled=__1__ using barrels
 
 [mod-setting-name]
+no-empty-barrels=No empty barrels
 keep-fluid-water=Keep water as a fluid
+
 [mod-setting-description]
+no-empty-barrels=Removes empty barrels as an ingredient from filling barrels, and as a product of emptying barrels.
 keep-fluid-water=Keep water as a fluid in recipes.
