Add messages to let user know how many recipes were added

--- a/locale/en/en.cfg
+++ b/locale/en/en.cfg
@@ -8,3 +8,7 @@ keep-fluid-water=Keep water as a fluid
 [mod-setting-description]
 no-empty-barrels=Removes empty barrels as an ingredient from filling barrels, and as a product of emptying barrels.
 keep-fluid-water=Keep water as a fluid in recipes.
+
+[barrel-recipes]
+on_init=Barrel Recipes: Created __1__ alternative recipe(s) that use barreled fluids.
+on_configuration_changed=Barrel Recipes: Mods changed. Created __1__ alternative recipe(s) that use barreled fluids.
